# SW-Generation-w-Tooling

./: .env.example  .gitignore  4.2.0  README.md
Phase 0/: analyzed_medical_questions.csv  diagnose.py  domain_categorization_exploration.ipynb  incorrectly_answered_questions_consolidated.csv  merge_and_explore_final_dataset.ipynb
Phase 0/results_2025-04-22_23-00-05/: gemma_results_medmcqa.csv  nvidia_results_medmcqa.csv
Phase 0/results_2025-04-23_09-32-47/: summary_mmlu_clinical_knowledge.txt
Phase 0/results_2025-04-23_09-34-14/: summary_pubmedqa_pqa_l.txt  vertex_gemma_results_pubmedqa_pqa_l.csv
Phase 0/results_2025-04-23_10-08-44/: gemini_results_mmlu_clinical_knowledge.csv  summary_mmlu_clinical_knowledge.txt
Phase 0/results_2025-04-23_16-13-20/: gemini_results_medxpertqa.csv  nvidia_results_medxpertqa.csv
Phase 0/results_2025-04-23_18-01-31/: gemini_results_medxpertqa.csv
Phase 0/results_2025-04-23_19-09-49/: nvidia_results_mmlu_clinical_knowledge.csv
Phase 0/results_2025-04-23_19-11-59/: nvidia_results_pubmedqa_pqa_l.csv  summary_pubmedqa_pqa_l.txt
Phase 0/results_2025-04-24_18-12-17/: nvidia_results_medxpertqa.csv
Phase 0/results_2025-04-24_19-49-46/: nvidia_results_medxpertqa.csv
Phase 0/results_2025-04-24_22-05-00/: summary_medxpertqa.txt
Phase 0/results_2025-04-24_23-22-33/: gemini_results_medxpertqa.csv
Phase 0/results_2025-04-25_11-32-17/: nvidia_results_medxpertqa.csv
Phase 0/results_2025-04-26_08-42-57/: nvidia_results_medxpertqa.csv
Phase1/: Gemma3-GRPO.ipynb  Gemma3_SFTMedical.ipynb  README.md
Phase1/deep_research/: pyproject.toml
Phase1/deep_research/deep_research.py/query/: parser.py
Phase1/deep_research/deep_research/crawler/: crawler.py
Phase1/deep_research/deep_research/query/: __init__.py  parser.py
Phase1/deep_research/deep_research/search/: __init__.py
Phase1/deep_research/deep_research/search/engines/: __init__.py  google.py  wikipedia.py
Phase1/notebooks/: Gemma3-GRPO.ipynb  (+1 more)
original-QA-filtering/: a.py  benchmarker.py  diagnose.py  gemini_failed_medmcqa.csv  gemma-vertexai-test.py  gemma_failed_medmcqa.csv  incorrectly_answered_questions_consolidated.csv  medmcqa_analysis.ipynb  merge_and_explore_final_dataset.ipynb  nvidia_deepseek_failed_medmcqa.csv  requirements.txt
(+74 files in other folders)
